sid/guestbook/guestbook-ui-svc.sid.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: sid
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guestbook-ui
