sid/guestbook/guestbook-ui.ingress.sid.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui-http-ingress
spec:
  rules:
    - host: "guestbook.sid.k8s.test"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
